<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home_fragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/cqu_inventory_system"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        android:textSize="32sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text=""
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="83dp"
        android:layout_above="@+id/btnNext"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-153dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="103dp"
            android:layout_height="39dp"
            android:layout_marginBottom="-153dp"
            android:layout_marginStart="33dp"
            android:text="@string/user_name"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <EditText
            android:id="@+id/username"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-153dp"
            android:layout_marginEnd="114dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPassword" />

    </LinearLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_marginTop="153dp"
        android:text="@string/next" />

</RelativeLayout>